objects/SpecialConstructionQuoteAnswer__c.object
<CustomObject>
    <fields>
        <fullName>AccountCode__c</fullName>
        <formula>Account__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>取引先コード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountNameKana__c</fullName>
        <formula>Account__r.NameUpToKana__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>取引先名称(半角)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountName__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>取引先名称</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>取引先</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>SpecialConstructionQuotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ApplicationSoftware__c</fullName>
        <label>応用ソフト</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AreaName__c</fullName>
        <label>地域名称</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssistantCode__c</fullName>
        <label>アシスタントコード</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssistantName__c</fullName>
        <label>アシスタント名称</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BodyFormName__c</fullName>
        <label>本体形式名</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BudgetAmount__c</fullName>
        <label>取引先予算金額</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BuiltInAdjustmentDivision__c</fullName>
        <label>組込調整区分</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BuiltInPoint__c</fullName>
        <label>組込ポイント</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancel__c</fullName>
        <label>取消</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyDivision__c</fullName>
        <label>会社区分</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyName__c</fullName>
        <label>会社名称</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConstPeriodTotal__c</fullName>
        <formula>DesignConstPeriod__c + ManufactureConstPeriod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>工期合計(週)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ConstructionDivision__c</fullName>
        <label>工事区分</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConstructionNameE__c</fullName>
        <label>工事名(英字)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConstructionNameJ__c</fullName>
        <label>工事名(漢字)</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrencyCode__c</fullName>
        <label>通貨コード</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decline__c</fullName>
        <label>辞退</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DegreeOfUrgency__c</fullName>
        <label>緊急度</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliManualAssembly__c</fullName>
        <label>納入要領書・組立図</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveredBodySerialNo__c</fullName>
        <label>既納本体製番</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DesignConstPeriod__c</fullName>
        <label>設計工期(週)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DrawingReleaseYN__c</fullName>
        <label>出図有無</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form__c</fullName>
        <label>形式</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FormalModelPN__c</fullName>
        <label>正式機種P/N</label>
        <length>47</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instrumental__c</fullName>
        <label>インスト</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JEOLArrangementDevision__c</fullName>
        <label>JEOL手配区分</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ManufactureConstPeriod__c</fullName>
        <label>製造工期(週)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes_URL_Link__c</fullName>
        <formula>IF (
 ISNULL(notes_url__c) ,
 &apos;&apos;,
 HYPERLINK( notes_url__c ,  notes_url__c , &apos;_self&apos;)
)</formula>
        <label>Notes URL Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OfficialQuote__c</fullName>
        <label>建値</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OperatingSystem__c</fullName>
        <label>基本ソフト</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderForm__c</fullName>
        <label>受注形態</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Others__c</fullName>
        <label>その他</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OverseasPrice__c</fullName>
        <label>海外価格</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProductTypeName__c</fullName>
        <label>製品タイプ名称</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductType__c</fullName>
        <label>製品タイプ</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuoteAnswerDateTime__c</fullName>
        <label>見積回答日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>QuoteAnswerDeadlineFormula__c</fullName>
        <formula>Datevalue(QuoteAnswerDeadline__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>見積回答期限</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QuoteAnswerDeadline__c</fullName>
        <label>見積回答期限（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>QuoteAnswerExpirationDateFormula__c</fullName>
        <formula>Datevalue(QuoteAnswerExpirationDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>見積有効期限</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QuoteAnswerExpirationDate__c</fullName>
        <label>見積有効期限（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>QuoteAnswerNo__c</fullName>
        <externalId>true</externalId>
        <label>見積回答№</label>
        <length>11</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QuoteRequestCancel__c</fullName>
        <label>見積依頼取消</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuoteRequestCreateDateFormula__c</fullName>
        <formula>Datevalue(QuoteRequestCreateDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>見積依頼作成日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QuoteRequestCreateDate__c</fullName>
        <label>見積依頼作成日（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>QuoteRequestNo__c</fullName>
        <label>見積依頼№</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>備考</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestAreaCode__c</fullName>
        <label>依頼地域コード</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestEmployeeCode__c</fullName>
        <label>依頼社員コード</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestEmployeeName__c</fullName>
        <label>依頼社員名称</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestedDeliveryDateFormula__c</fullName>
        <formula>Datevalue(RequestedDeliveryDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>取引先要求納期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RequestedDeliveryDate__c</fullName>
        <label>取引先要求納期（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Rom__c</fullName>
        <label>ROM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesTakeOffPrice__c</fullName>
        <label>営業引取価格</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Schematic__c</fullName>
        <label>回路図</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SerialNo__c</fullName>
        <label>製番</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpecificationDetail__c</fullName>
        <label>仕様明細</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>件名</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>http_url__c</fullName>
        <label>Http URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>notes_url__c</fullName>
        <label>Notes URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>特殊工事見積回答</label>
    <listViews>
        <fullName>All_1W</fullName>
        <columns>QuoteRequestNo__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>QuoteAnswerDateTime__c</columns>
        <columns>QuoteAnswerNo__c</columns>
        <columns>SerialNo__c</columns>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Form__c</columns>
        <columns>AccountCode__c</columns>
        <columns>AccountName__c</columns>
        <columns>DegreeOfUrgency__c</columns>
        <columns>OrderForm__c</columns>
        <columns>BudgetAmount__c</columns>
        <columns>SalesTakeOffPrice__c</columns>
        <columns>OverseasPrice__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>QuoteRequestNo__c</field>
            <operation>startsWith</operation>
            <value>NM</value>
        </filters>
        <filters>
            <field>Form__c</field>
            <operation>startsWith</operation>
            <value>NM-Z</value>
        </filters>
        <filters>
            <field>QuoteRequestCreateDate__c</field>
            <operation>greaterOrEqual</operation>
            <value>7/1/2015</value>
        </filters>
        <label>NM系列</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>All_1W_ISRT</fullName>
        <columns>NAME</columns>
        <columns>QuoteRequestNo__c</columns>
        <columns>QuoteAnswerNo__c</columns>
        <columns>AccountCode__c</columns>
        <columns>AccountName__c</columns>
        <columns>QuoteAnswerDateTime__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>N_DAYS_AGO:7</value>
        </filters>
        <label>すべて選択(作成一週間以内)</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>CA</fullName>
        <columns>AreaName__c</columns>
        <columns>Account__c</columns>
        <columns>BodyFormName__c</columns>
        <columns>Subject__c</columns>
        <columns>SalesTakeOffPrice__c</columns>
        <columns>Form__c</columns>
        <columns>NAME</columns>
        <columns>QuoteRequestCreateDateFormula__c</columns>
        <columns>QuoteAnswerExpirationDateFormula__c</columns>
        <columns>RequestEmployeeName__c</columns>
        <columns>Remarks__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>QuoteRequestNo__c</field>
            <operation>contains</operation>
            <value>CA,LC</value>
        </filters>
        <filters>
            <field>AreaName__c</field>
            <operation>equals</operation>
            <value>札幌支店</value>
        </filters>
        <label>札幌支店　CA&amp;LC</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>CA2</fullName>
        <columns>AreaName__c</columns>
        <columns>Account__c</columns>
        <columns>BodyFormName__c</columns>
        <columns>Subject__c</columns>
        <columns>SalesTakeOffPrice__c</columns>
        <columns>Form__c</columns>
        <columns>NAME</columns>
        <columns>QuoteRequestCreateDateFormula__c</columns>
        <columns>QuoteAnswerExpirationDateFormula__c</columns>
        <columns>RequestEmployeeName__c</columns>
        <columns>Remarks__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>QuoteRequestNo__c</field>
            <operation>contains</operation>
            <value>CA,LC</value>
        </filters>
        <filters>
            <field>AreaName__c</field>
            <operation>equals</operation>
            <value>名古屋支店</value>
        </filters>
        <label>名古屋支店　CA&amp;LC</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>CA3</fullName>
        <columns>AreaName__c</columns>
        <columns>Account__c</columns>
        <columns>BodyFormName__c</columns>
        <columns>Subject__c</columns>
        <columns>SalesTakeOffPrice__c</columns>
        <columns>Form__c</columns>
        <columns>NAME</columns>
        <columns>QuoteRequestCreateDateFormula__c</columns>
        <columns>QuoteAnswerExpirationDateFormula__c</columns>
        <columns>RequestEmployeeName__c</columns>
        <columns>Remarks__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>QuoteRequestNo__c</field>
            <operation>contains</operation>
            <value>CA,LC</value>
        </filters>
        <filters>
            <field>AreaName__c</field>
            <operation>contains</operation>
            <value>大阪支店,高松支店</value>
        </filters>
        <label>大阪・高松支店　CA&amp;LC</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>CA4</fullName>
        <columns>AreaName__c</columns>
        <columns>Account__c</columns>
        <columns>BodyFormName__c</columns>
        <columns>Subject__c</columns>
        <columns>SalesTakeOffPrice__c</columns>
        <columns>Form__c</columns>
        <columns>NAME</columns>
        <columns>QuoteRequestCreateDateFormula__c</columns>
        <columns>QuoteAnswerExpirationDateFormula__c</columns>
        <columns>RequestEmployeeName__c</columns>
        <columns>Remarks__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>QuoteRequestNo__c</field>
            <operation>contains</operation>
            <value>CA,LC</value>
        </filters>
        <filters>
            <field>AreaName__c</field>
            <operation>equals</operation>
            <value>広島支店</value>
        </filters>
        <label>広島支店　CA&amp;LC</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>CA5</fullName>
        <columns>AreaName__c</columns>
        <columns>Account__c</columns>
        <columns>BodyFormName__c</columns>
        <columns>Subject__c</columns>
        <columns>SalesTakeOffPrice__c</columns>
        <columns>Form__c</columns>
        <columns>NAME</columns>
        <columns>QuoteRequestCreateDateFormula__c</columns>
        <columns>QuoteAnswerExpirationDateFormula__c</columns>
        <columns>RequestEmployeeName__c</columns>
        <columns>Remarks__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>QuoteRequestNo__c</field>
            <operation>contains</operation>
            <value>CA,LC</value>
        </filters>
        <filters>
            <field>AreaName__c</field>
            <operation>equals</operation>
            <value>福岡支店</value>
        </filters>
        <label>福岡支店　CA&amp;LC</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>CA_LC</fullName>
        <columns>AreaName__c</columns>
        <columns>Account__c</columns>
        <columns>BodyFormName__c</columns>
        <columns>Subject__c</columns>
        <columns>SalesTakeOffPrice__c</columns>
        <columns>Form__c</columns>
        <columns>NAME</columns>
        <columns>QuoteRequestCreateDateFormula__c</columns>
        <columns>QuoteAnswerExpirationDateFormula__c</columns>
        <columns>RequestEmployeeName__c</columns>
        <columns>Remarks__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>QuoteRequestNo__c</field>
            <operation>contains</operation>
            <value>CA,LC</value>
        </filters>
        <label>CA＆LC</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>View</fullName>
        <columns>Account__c</columns>
        <columns>BodyFormName__c</columns>
        <columns>Subject__c</columns>
        <columns>SalesTakeOffPrice__c</columns>
        <columns>Form__c</columns>
        <columns>NAME</columns>
        <columns>QuoteRequestNo__c</columns>
        <columns>QuoteAnswerExpirationDateFormula__c</columns>
        <columns>RequestEmployeeName__c</columns>
        <columns>Remarks__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>QuoteRequestNo__c</field>
            <operation>startsWith</operation>
            <value>LC</value>
        </filters>
        <label>ＬＣ</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>View1</fullName>
        <columns>AreaName__c</columns>
        <columns>Account__c</columns>
        <columns>BodyFormName__c</columns>
        <columns>Subject__c</columns>
        <columns>SalesTakeOffPrice__c</columns>
        <columns>Form__c</columns>
        <columns>NAME</columns>
        <columns>QuoteRequestCreateDateFormula__c</columns>
        <columns>QuoteAnswerExpirationDateFormula__c</columns>
        <columns>RequestEmployeeName__c</columns>
        <columns>Remarks__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>QuoteRequestNo__c</field>
            <operation>contains</operation>
            <value>CA,LC</value>
        </filters>
        <filters>
            <field>AreaName__c</field>
            <operation>contains</operation>
            <value>東京支店,横浜事務所,筑波支店</value>
        </filters>
        <label>東京支店　CA&amp;LC</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>select_MTMR_no</fullName>
        <columns>NAME</columns>
        <columns>QuoteRequestNo__c</columns>
        <columns>QuoteAnswerNo__c</columns>
        <columns>AccountCode__c</columns>
        <columns>AccountName__c</columns>
        <columns>QuoteAnswerDateTime__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>QuoteRequestNo__c</field>
            <operation>startsWith</operation>
            <value>NMB120</value>
        </filters>
        <label>見積依頼№指定</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>select_no</fullName>
        <columns>NAME</columns>
        <columns>QuoteRequestNo__c</columns>
        <columns>QuoteAnswerNo__c</columns>
        <columns>AccountCode__c</columns>
        <columns>AccountName__c</columns>
        <columns>QuoteAnswerDateTime__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>QuoteAnswerNo__c</field>
            <operation>equals</operation>
            <value>EMT13005101,EMT12036901,EMO11028601,NMB12015801,NMB12010401</value>
        </filters>
        <label>回答№指定</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <label>特殊工事見積名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Read</sharingModel>
</CustomObject>